--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script type="text/javascript" src="js/vendor/jquery-1.10.2.min.js"></script>		
+		<script type="text/javascript" src="js/vendor/jquery-1.10.2.min.js"></script>	
+		<script type="text/javascript" src="javascripts/vendor/moment/moment.js"></script>
+		<script type="text/javascript" src="javascripts/vendor/bootstrap/bootstrap.min.js"></script>	
 		<script type="text/javascript" src="js/vendor/ember/handlebars-1.1.2.js"></script>
 		<script type="text/javascript" src="js/vendor/ember/ember-1.6.1.js"></script>
 		<meta charset="utf-8">
 	  	<title>fundamentals</title>
+	  	<link rel='stylesheet' href='css/bootstrap.min.css' />
+		<link rel='stylesheet' href='css/bootstrap-theme.min.css' />
+		<link rel='stylesheet' href='css/overrides.css' />
 	</head>
 	<body>
 		<div class="container" id="github-app">
